--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.0.5",
+    "react-scripts": "^4.0.3",
+    "truffle": "^5.3.14",
     "truffle-flattener": "^1.4.2",
-    "web3": "1.0.0-beta.55"
+    "web3": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +37,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/register": "^7.14.5"
+  }
 }
