--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "gregory@dappuniversity.com",
   "dependencies": {
     "@openzeppelin/contracts": "^2.3.0",
+    "@truffle/hdwallet-provider": "^1.4.1",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -15,12 +16,14 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "dotenv": "^10.0.0",
     "react": "16.8.4",
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
     "react-scripts": "^4.0.3",
     "truffle": "^5.3.14",
     "truffle-flattener": "^1.4.2",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.4.0"
   },
   "scripts": {
