--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "gregory@dappuniversity.com",
   "dependencies": {
     "@openzeppelin/contracts": "^2.3.0",
-    "@truffle/hdwallet-provider": "^1.4.1",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -21,6 +20,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
     "react-scripts": "^4.0.3",
+    "react-truncate": "^2.4.0",
     "truffle": "^5.3.14",
     "truffle-flattener": "^1.4.2",
     "truffle-hdwallet-provider": "^1.0.17",
@@ -43,6 +43,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@babel/register": "^7.14.5"
+    "@babel/register": "^7.14.5",
+    "@truffle/hdwallet-provider": "^1.4.1"
   }
 }
