--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "dotenv": "^10.0.0",
+    "randomstring": "^1.2.1",
     "react": "16.8.4",
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
