--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.8.4",
     "react-scripts": "^4.0.3",
+    "react-spinner": "^0.2.7",
     "react-truncate": "^2.4.0",
     "truffle": "^5.3.14",
     "truffle-flattener": "^1.4.2",
